Final touching of the boilerplate
