# cmd/api/main.go
@@ -1,10 +1,7 @@
-// Package classification Petstore API.
+// Go Gin Boilerplate API Demo.
 //
-// the purpose of this application is to provide an application
-// that is using plain go code to define an API
-//
-// This should demonstrate all the possible comment annotations
-// that are available to turn go code into a fully compliant swagger 2.0 spec
+// The purpose of this application is to provide boilerplate
+// of REST full API using MongoDB
 //
 // Terms Of Service:
 //
@@ -15,41 +12,13 @@
 //     BasePath: /v1
 //     Version: 0.0.1
 //     License: MIT http://opensource.org/licenses/MIT
-//     Contact: John Doe<john.doe@example.com> http://john.doe.com
+//     Contact: Chintan Kukadiya<contact.chintankukadiya@gmail.com>
 //
 //     Consumes:
 //     - application/json
-//     - application/xml
 //
 //     Produces:
 //     - application/json
-//     - application/xml
-//
-//     Security:
-//     - api_key:
-//
-//     SecurityDefinitions:
-//     api_key:
-//          type: apiKey
-//          name: KEY
-//          in: header
-//     oauth2:
-//         type: oauth2
-//         authorizationUrl: /oauth2/auth
-//         tokenUrl: /oauth2/token
-//         in: header
-//         scopes:
-//           bar: foo
-//         flow: accessCode
-//
-//     Extensions:
-//     x-meta-value: value
-//     x-meta-array:
-//       - value1
-//       - value2
-//     x-meta-array-obj:
-//       - name: obj
-//         value: field
 //
 // swagger:meta
 package main
